crates/weaver-e2e/tests/snapshots/graph_slice_rust_derive_macro.snap
---
source: crates/weaver-e2e/tests/test_support/mod.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe graph-slice --uri <uri> --position 2:8 --entry-detail semantic --node-detail semantic",
  "status": 0,
  "stdout": "{\n  \"cards\": [\n    {\n      \"card_version\": 1,\n      \"etag\": \"<etag>\",\n      \"metrics\": {\n        \"cyclomatic\": 1,\n        \"lines\": 3\n      },\n      \"provenance\": {\n        \"extracted_at\": \"<timestamp>\",\n        \"sources\": [\n          \"tree_sitter\",\n          \"tree_sitter_degraded_semantic\"\n        ]\n      },\n      \"structure\": {\n        \"branches\": [],\n        \"locals\": []\n      },\n      \"symbol\": {\n        \"ref\": {\n          \"kind\": \"type\",\n          \"language\": \"rust\",\n          \"name\": \"User\",\n          \"range\": {\n            \"end\": {\n              \"column\": 1,\n              \"line\": 3\n            },\n            \"start\": {\n              \"column\": 0,\n              \"line\": 1\n            }\n          },\n          \"uri\": \"<uri>\"\n        },\n        \"symbol_id\": \"<symbol_id>\"\n      }\n    }\n  ],\n  \"constraints\": {\n    \"budget\": {\n      \"max_cards\": 30,\n      \"max_edges\": 200,\n      \"max_estimated_tokens\": 4000\n    },\n    \"depth\": 2,\n    \"direction\": \"both\",\n    \"edge_types\": [\n      \"call\",\n      \"import\",\n      \"config\"\n    ],\n    \"entry_detail\": \"semantic\",\n    \"min_confidence\": 0.5,\n    \"node_detail\": \"semantic\"\n  },\n  \"edges\": [],\n  \"entry\": {\n    \"symbol_id\": \"<symbol_id>\"\n  },\n  \"schema_version\": \"graph_slice.v1\",\n  \"slice_version\": 1,\n  \"spillover\": {\n    \"frontier\": [],\n    \"truncated\": false\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
