crates/weaver-e2e/tests/snapshots/graph_slice_rust_lifetime_function.snap
---
source: crates/weaver-e2e/tests/test_support/mod.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe graph-slice --uri <uri> --position 1:4 --entry-detail semantic --node-detail semantic",
  "status": 0,
  "stdout": "{\n  \"cards\": [\n    {\n      \"card_version\": 1,\n      \"etag\": \"<etag>\",\n      \"metrics\": {\n        \"cyclomatic\": 1,\n        \"lines\": 3\n      },\n      \"provenance\": {\n        \"extracted_at\": \"<timestamp>\",\n        \"sources\": [\n          \"tree_sitter\",\n          \"tree_sitter_degraded_semantic\"\n        ]\n      },\n      \"signature\": {\n        \"display\": \"fn first<'a>(items: &'a [String]) -> Option<&'a String>\",\n        \"params\": [\n          {\n            \"name\": \"items\",\n            \"type\": \"&'a [String]\"\n          }\n        ],\n        \"returns\": \"Option<&'a String>\"\n      },\n      \"structure\": {\n        \"branches\": [],\n        \"locals\": []\n      },\n      \"symbol\": {\n        \"ref\": {\n          \"kind\": \"function\",\n          \"language\": \"rust\",\n          \"name\": \"first\",\n          \"range\": {\n            \"end\": {\n              \"column\": 1,\n              \"line\": 2\n            },\n            \"start\": {\n              \"column\": 0,\n              \"line\": 0\n            }\n          },\n          \"uri\": \"<uri>\"\n        },\n        \"symbol_id\": \"<symbol_id>\"\n      }\n    }\n  ],\n  \"constraints\": {\n    \"budget\": {\n      \"max_cards\": 30,\n      \"max_edges\": 200,\n      \"max_estimated_tokens\": 4000\n    },\n    \"depth\": 2,\n    \"direction\": \"both\",\n    \"edge_types\": [\n      \"call\",\n      \"import\",\n      \"config\"\n    ],\n    \"entry_detail\": \"semantic\",\n    \"min_confidence\": 0.5,\n    \"node_detail\": \"semantic\"\n  },\n  \"edges\": [],\n  \"entry\": {\n    \"symbol_id\": \"<symbol_id>\"\n  },\n  \"schema_version\": \"graph_slice.v1\",\n  \"slice_version\": 1,\n  \"spillover\": {\n    \"frontier\": [],\n    \"truncated\": false\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
